# copilot-session-tui

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  input.rs  main.rs  updater.rs
src/events/: parser.rs
src/session/: loader.rs  manager.rs  mod.rs
src/ui/: mod.rs  popups.rs  session_detail.rs  session_list.rs  status_bar.rs
