[package]
name = "copilot-session-tui"
version = "0.4.1"
edition = "2021"
description = "A TUI for managing GitHub Copilot CLI sessions"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
fuzzy-matcher = "0.3"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2"] }
semver = "1"
ureq = { version = "3", features = ["json"] }
